[package]
name = "log_lib"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"


[[test]]
name = "use_marco_example"
path = "src/tests/macro_example.rs"


[[example]]
name = "async_main_example"
path = "src/examples/async_main_example.rs"

[dependencies]
log_macro = {git = "https://github.com/qaqlyhqaq/log_marco.git"}
log = { version = "0.4" }
log4rs = { version = "1.3" }
chrono = {version = "0.4"}